multi level menu hotfix in gentelella, fixes #5

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,13 @@
   <body class="nav-md">
     <div class="container body">
       <div class="main_container">
+        <!-- left navigation -->
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <%= render partial: 'layouts/leftnav' %>
           </div>
         </div>
+        <!-- left navigation -->
 
         <!-- top navigation -->
         <div class="top_nav">
