--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,11 @@
 
         <!-- page content -->
         <div class="right_col" role="main">
-          <%= yield %>
+          <div class="row">
+            <div id="bsimmcontent" class="col-md-12 col-sm-12 col-xs-12">
+              <%= yield %>
+            </div>
+          </div>
         </div>
         <!-- /page content -->
 
