--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="pull-right">
-  BSimm Calculator 2018 - Prodexity Ltd.
+  BSimm Calculator 2018 rev. <%= @revision[0, 7] %> - Prodexity Ltd.
 </div>
 <div class="clearfix"></div>
